logs/Slang/generic/typedef/typedef_test_0.sv.log
name: typedef_test_0
description: Test
should_fail: 0
tags: 6.18
files: /home/travis/build/SymbiFlow/sv-tests/tests/generic/typedef/typedef_test_0.sv
incdirs: 
top_module: 
rc: 1

../../home/travis/build/SymbiFlow/sv-tests/tests/generic/typedef/typedef_test_0.sv:7:9: error: forward typedef 'i_am_a_type_really' does not resolve to a data type
typedef i_am_a_type_really;
        ^
